Fix overflowing names in the new userlist

--- a/customize.dist/src/less/toolbar.less
+++ b/customize.dist/src/less/toolbar.less
@@ -138,7 +138,14 @@ body .userlist-drawer {
                 color: black;
                 font-size: 40px;
             }
+            .name {
+                flex: 1;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
             media-tag {
+                min-height: 50px;
+                min-width: 50px;
                 max-height: 50px;
                 max-width: 50px;
                 img {
